--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-Name: Shobhank Sharma
-Email: shobhanks1987@gmail.com
+<h1>Contact</h1>
+<h2>Name: Shobhank Sharma</h2></br>
+<h2>Email: shobhanks1987@gmail.com</h2>
