--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,9 @@
-
+<h1>Privacy Policy</h1>
+<p>The fun with flags app is intended for fun and education purpose only. 
+  It does not include third-party analytics or third-party advertising. This provides a safer experience for kids. 
+  This app does not collect or send any private or any user specific information like name, address, email, location, photos, videos, drawings, the ability to chat, other personal data, or persistent identifiers etc.
+</p>
+</h1>
+  
+ 
+  
